fix:Make dropdown menu transition faster, make owl prev and next center aligned

--- a/css/index.css
+++ b/css/index.css
@@ -151,13 +151,13 @@ nav a {
   opacity: 0;
   z-index: 4;
   display: none;
-  transition: opacity 1s ease 0.2s;
+  transition: opacity 1s ease 0.1s;
 }
 
 .dark {
   opacity: 0.3;
   display: block;
-  transition: opacity 1s ease 0.2s;
+  transition: opacity 1s ease 0.1s;
 }
 .dropdown-menu {
   width: 100%;
@@ -829,7 +829,7 @@ nav a {
   background: transparent;
   border: none;
   font-size: 20px;
-  padding: 10px;
+  padding: 13px;
   position: absolute;
   right: -25px;
   color: #3f598a;
@@ -840,7 +840,7 @@ nav a {
   background: transparent;
   border: none;
   font-size: 20px;
-  padding: 10px;
+  padding: 13px;
   position: absolute;
   left: -25px;
   color: #3f598a;
